# School-Management-System

./: .gitignore  CMakeLists.txt  README.md
include/: class.h  menu.h  query_system.h  school.h  school_factory.h  student.h
src/: class.cpp  main.cpp  menu.cpp  query_system.cpp  school.cpp  school_factory.cpp  student.cpp
